@@ -12,6 +12,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 
@@ -161,7 +162,7 @@ public class BosService {
 
 	public List<BosResponseDto> getAllActiveBos() {
 		List<BosData> bosData = bosDataDao.findByIsActive(true);
-		List<BosResponseDto> coursesWithFocusDtos = bosData.stream().map(BosResponseDto::fromBosData).toList();
+		List<BosResponseDto> coursesWithFocusDtos = bosData.stream().map(BosResponseDto::fromBosData).collect(Collectors.toList());
 		return coursesWithFocusDtos;
 	}
 
@@ -170,10 +171,10 @@ public class BosService {
 		if (null != departmentId) {
 			List<Integer> userIds = userRepository.findUserIdsByDeptId(departmentId);
 			if (null != userIds && !userIds.isEmpty()) {
-				List<String> userIdsAsString = userIds.stream().map(String::valueOf).toList();
+				List<String> userIdsAsString = userIds.stream().map(String::valueOf).collect(Collectors.toList());
 				List<BosData> coursesWithFocus = bosDataDao.getByCreatedIds(userIdsAsString);
 				List<BosResponseDto> bosResponseDto = coursesWithFocus.stream().map(BosResponseDto::fromBosData)
-						.toList();
+						.collect(Collectors.toList());
 				return bosResponseDto;
 			}
 		}
@@ -182,7 +183,7 @@ public class BosService {
 
 	public List<BosResponseDto> getBosWithFocusByCreatedBy(String userId) {
 		List<BosData> coursesWithFocus = bosDataDao.findByCreatedByAndIsActive(userId, true);
-		List<BosResponseDto>  bosResponseDto = coursesWithFocus.stream().map(BosResponseDto::fromBosData).toList();
+		List<BosResponseDto>  bosResponseDto = coursesWithFocus.stream().map(BosResponseDto::fromBosData).collect(Collectors.toList());
 		return bosResponseDto;
 	}
 
