@@ -14,6 +14,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 
@@ -209,14 +210,14 @@ public class CoursesWithFocusService {
 	public List<CoursesWithFocusResponseDto> getAllActiveCoursesWithFocus() {
 		List<CoursesWithFocus> coursesWithFocus = coursesWithFocusDao.findByIsActive(true);
 		List<CoursesWithFocusResponseDto> coursesWithFocusDtos = coursesWithFocus.stream()
-				.map(CoursesWithFocusResponseDto::fromCoursesWithFocus).toList();
+				.map(CoursesWithFocusResponseDto::fromCoursesWithFocus).collect(Collectors.toList());
 		return coursesWithFocusDtos;
 	}
 
 	public List<CoursesWithFocusResponseDto> getCoursesWithFocusByCreatedBy(String string) {
 		List<CoursesWithFocus> coursesWithFocus = coursesWithFocusDao.findByCreatedByAndIsActive(string, true);
 		List<CoursesWithFocusResponseDto> coursesWithFocusDtos = coursesWithFocus.stream()
-				.map(CoursesWithFocusResponseDto::fromCoursesWithFocus).toList();
+				.map(CoursesWithFocusResponseDto::fromCoursesWithFocus).collect(Collectors.toList());
 		return coursesWithFocusDtos;
 	}
 
@@ -225,10 +226,10 @@ public class CoursesWithFocusService {
 		if (null != departmentId) {
 			List<Integer> userIds = userRepository.findUserIdsByDeptId(departmentId);
 			if (null != userIds && !userIds.isEmpty()) {
-				List<String> userIdsAsString = userIds.stream().map(String::valueOf).toList();
+				List<String> userIdsAsString = userIds.stream().map(String::valueOf).collect(Collectors.toList());
 				List<CoursesWithFocus> coursesWithFocus = coursesWithFocusDao.getByCreatedIds(userIdsAsString);
 				List<CoursesWithFocusResponseDto> coursesWithFocusDtos = coursesWithFocus.stream()
-						.map(CoursesWithFocusResponseDto::fromCoursesWithFocus).toList();
+						.map(CoursesWithFocusResponseDto::fromCoursesWithFocus).collect(Collectors.toList());
 				return coursesWithFocusDtos;
 			}
 		}
